--- a/app/src/content/package.json
+++ b/app/src/content/package.json
@@ -4,12 +4,34 @@
   "description": "Adobe fonts",
   "main": "index.js",
   "scripts": {
+    "watch": "webpack --mode=development --watch --progress",
     "aemsync": "aemsync -w jcr_root",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
+    "aemsync": "^4.0.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
+    "ignore-loader": "^0.1.2",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9"
+  },
   "dependencies": {
-    "aemsync": "^4.0.0"
+    "@react/react-spectrum": "^2.20.0",
+    "@adobe/spectrum-css": "2.9.0"
   }
 }
