--- a/app/src/content/.babelrc
+++ b/app/src/content/.babelrc
@@ -2,6 +2,13 @@
   "presets": ["@babel/preset-env", "@babel/preset-react"],
   "plugins": [
         "@babel/plugin-proposal-class-properties",
-        "@babel/plugin-transform-runtime"
+        [ "@babel/plugin-transform-runtime", {
+          "absoluteRuntime": false,
+          "corejs": 3,
+          "helpers": true,
+          "regenerator": true,
+          "useESModules": false
+          }
+        ]
     ]
 }
